// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`email rendering tests rendering bid_accepted 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://decentraland.org/marketplace/contracts/0x557539e7792dc12a0555f5ff02d6ec0f0bc88e09/tokens/21",
  "actionButtonText": "CHECK IT OUT",
  "bannerLabel": "Bid Accepted",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/90cd0572-c52d-4307-99cb-50c86c7ca6d5/1200x480.png",
  "content": "<p style="font-size: 16px; font-weight: 700; line-height: 24px; text-align: center; color: #43404A;">
  Your bid was accepted for this item <span style="color: #FF2D55;">Netgate male</span>.
</p>
<table
  style="width: 100%; max-width: 600px; margin: 40px auto 20px; border-spacing: 0; text-align: center;">
  <tr>
    <th style="width: 33%; ;color: #43404A; font-size: 16px; font-weight: 700; line-height: 24px;">Item</th>
    <th style="width: 33%; ;color: #43404A; font-size: 16px; font-weight: 700; line-height: 24px;">Bid</th>
  <tr>
    <td style="padding: 10px;"><img src="https://peer.decentraland.org/lambdas/collections/contents/urn:decentraland:matic:collections-v2:0x557539e7792dc12a0555f5ff02d6ec0f0bc88e09:0/thumbnail" alt="Netgate male"
        style="display: block; margin: 0 auto; width: 24px; height: 24px;" /></td>
    <td style="padding: 10px;"><img src="http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/d3fad3d4-34a0-43af-8660-359966d5d71c/33x32.png" alt="Price Icon"
        style="display: block; margin: 0 auto; width: 24px; height: 24px;" /></td>
  </tr>
  <tr>
    <td style="padding: 10px; font-size: 18px; font-weight: bold; color: #000;">Netgate male</td>
    <td style="padding: 10px; font-size: 18px; font-weight: bold; color: #000;">1.50</td>
  </tr>
</table>",
  "subject": "Your Bid Has Been Accepted! 🥳",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/bid_accepted?signature=9ec6a41cd5d70f14ea3ce7f7bfc7278daa1de5627201aa5adeb7b60275e7197d",
}
`;

exports[`email rendering tests rendering bid_received 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://decentraland.org/marketplace/account?assetType=nft&section=bids",
  "actionButtonText": "RESPOND TO BID",
  "bannerLabel": "Bid Received",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/fb3fd618-6b5b-4f34-9e6c-7354942dbc97/1200x480.png",
  "content": "<p style="font-size: 16px; font-weight: 700; line-height: 24px; text-align: center; color: #43404A;">
  You've received a bid for your item <span style="color: #FF2D55;">Space Jams</span>.
</p>
<table
  style="width: 100%; max-width: 600px; margin: 40px auto 20px; border-spacing: 0; text-align: center;">
  <tr>
    <th style="width: 33%; ;color: #43404A; font-size: 16px; font-weight: 700; line-height: 24px;">Item</th>
    <th style="width: 33%; ;color: #43404A; font-size: 16px; font-weight: 700; line-height: 24px;">Bid</th>
  <tr>
    <td style="padding: 10px;"><img src="https://peer.decentraland.org/lambdas/collections/contents/urn:decentraland:matic:collections-v2:0xf6ed0f2eea302dbd77482bd4771645ee142ecf7c:1/thumbnail" alt="Space Jams"
        style="display: block; margin: 0 auto; width: 24px; height: 24px;" /></td>
    <td style="padding: 10px;"><img src="http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/d3fad3d4-34a0-43af-8660-359966d5d71c/33x32.png" alt="Price Icon"
        style="display: block; margin: 0 auto; width: 24px; height: 24px;" /></td>
  </tr>
  <tr>
    <td style="padding: 10px; font-size: 18px; font-weight: bold; color: #000;">Space Jams</td>
    <td style="padding: 10px; font-size: 18px; font-weight: bold; color: #000;">1.50</td>
  </tr>
</table>",
  "subject": "You‘ve Received a Bid! 💰",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/bid_received?signature=d5c3e6e4a1213edcbabd8293b60b109f4d583f896724af67f18d8e1ec0a39e2f",
}
`;

exports[`email rendering tests rendering events_started 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://play.decentraland.org/?position=14%2C100&realm=main",
  "actionButtonText": "JUMP IN",
  "bannerLabel": "Event Started",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/1fe47ce6-57a7-4e11-8f73-5576b1ed35d5/1200x480.png",
  "content": "<table style="width: 100%; max-width: 600px; margin: 0 auto; text-align: center;">
  <tr>
    <td>
      <p
        style="font-size: 16px; font-weight: 700; line-height: 24px; text-align: center; color: #43404A;">
        The event you’ve been waiting for has begun!
      </p>
    </td>
  </tr>
  <tr>
    <td>
      <img
        src="https://events-assets-099ac00.decentraland.org/poster/3b8e6fc465ee4488.png" 
        alt="Event Image" 
        style="width: 100%; max-width: 600px; border-radius: 12px;" />
    </td>
  </tr>
  <tr>
    <td>
      <p
        style="font-size: 20px; font-weight: 700; line-height: 32px; text-align: center; color: #FF7439;">
        Live DJ Music and Dancing in the Unity Café
      </p>
    </td>
  </tr>
</table>",
  "subject": "Jump In—Your Event Has Started! 🪩",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/events_started?signature=cd81b69793b500eed74735a88f2be42fa2bf419853b014165860c4304998feba",
}
`;

exports[`email rendering tests rendering events_starts_soon 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://play.decentraland.org/?position=-99%2C35&realm=main",
  "actionButtonText": "JUMP IN",
  "bannerLabel": "Event Starting Soon",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/d96a0ad5-b3bb-4117-a0b0-1e30b53f1607/1200x480.png",
  "content": "<table style="width: 100%; max-width: 600px; margin: 0 auto; text-align: center;">
  <tr>
    <td>
      <p
        style="font-size: 16px; font-weight: 700; line-height: 24px; text-align: center; color: #43404A;">
        The event you’ve been waiting for is about to begin!
      </p>
    </td>
  </tr>
  <tr>
    <td>
      <img
        src="https://events-assets-099ac00.decentraland.org/poster/215052d46626a2a8.png" 
        alt="Event Image" 
        style="width: 100%; max-width: 600px; border-radius: 12px;" />
    </td>
  </tr>
  <tr>
    <td>
      <p
        style="font-size: 20px; font-weight: 700; line-height: 32px; text-align: center; color: #FF2D55;">
        UNMONDAY YOURSELF
      </p>
    </td>
  </tr>
</table>",
  "subject": "Event Starting Soon! 🔔",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/events_starts_soon?signature=0477800e313b855d10038d850a7b7450cc86687adc863049450415611d1effe7",
}
`;

exports[`email rendering tests rendering governance_announcement 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://governance.decentraland.org/some-link",
  "actionButtonText": "READ ANNOUNCEMENT",
  "bannerLabel": "Governance Announcement",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/7ea50f0a-6e8f-4f49-8835-e74b13228747/600x240.png",
  "content": "<p style="font-size: 16px; font-weight: 700; line-height: 24px; text-align: center; color: #43404A;">
  The DAO has posted an announcement, <span style="color: #FF2D55;">Some title</span>. Read it on the governance forums.
</p>
",
  "subject": "DAO Announcement Posted 📢",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/null?signature=42ad30f79fb01e2c2ae57f84f34ab8b6bff2b70bc7a9e900e021f0b1fa22e7a8",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/null/governance_announcement?signature=033e9737a5b20c9af782facf62c1e65d637469f20331172456337a0a9bbe492d",
}
`;

exports[`email rendering tests rendering governance_authored_proposal_finished 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://governance.decentraland.org/proposal/?id=c9564934-1f5e-44a3-836e-c0e94c1f593f",
  "actionButtonText": "VIEW PROPOSAL",
  "bannerLabel": "Governance Your Proposal Ended",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/c1df78c1-72e1-4f55-9896-655cb1afc0d3/1200x480.png",
  "content": "<p style="font-size: 16px; font-weight: 700; line-height: 24px; text-align: center; color: #43404A;">
  The votes are in! Discover the outcome of your proposal <span style="color: #FF2D55;">Limit Grants Re-Submissions</span>.
</p>",
  "subject": "Your Proposal: Voting Results Are In! 🗳️",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/governance_authored_proposal_finished?signature=f1ca8c3fd6f39383aa205367335ba70df4f017d676302557ef76b3c37c0eb8f4",
}
`;

exports[`email rendering tests rendering governance_coauthor_requested 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://governance.decentraland.org/proposal/?id=cacb1ce3-b5e9-4133-901a-cb787f43871f",
  "actionButtonText": "RESPOND TO REQUEST",
  "bannerLabel": "Governance Co-Author Request",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/0b3877bd-4ce6-4571-bd11-d2dfa9af2230/1200x480.png",
  "content": "<p style="font-size: 16px; font-weight: 700; line-height: 24px; text-align: center; color: #43404A;">
  You've been invited to collaborate as a co-author on a the proposal <span style="color: #FF2D55;">DCL Community Video Library</span>!
</p>",
  "subject": "Co-Author Request Received! 🤝",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/governance_coauthor_requested?signature=ede0f5a009044402cfb42487e7c300f122b5047cb869f4ca4fca6ab4e715413b",
}
`;

exports[`email rendering tests rendering governance_new_comment_on_project_update 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://governance.decentraland.org/update/?id=a38ec7d7-7eb2-4f9a-b9c8-363785fdcbd6&proposalId=1b8eef75-add3-49d6-9181-3061daaf22ec",
  "actionButtonText": "VIEW COMMENT",
  "bannerLabel": "Governance New comment on Project",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/a30f5edc-fdf7-4de6-bdcf-7c0c99b632c4/600x240.png",
  "content": "<p style="font-size: 16px; font-weight: 700; line-height: 24px; text-align: center; color: #43404A;">
  Someone’s commented on your project update for Duel Arena P2E Continuum, Refinement &amp; Game Expansion [ Resubmission ]. Check it out and see what they have to say.
</p>
",
  "subject": "Your Project Update: New Comment 💬",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/governance_new_comment_on_project_update?signature=e2199b81d0ba406972576521fca39817b82720c1221bbfd17427495e8b1b35e3",
}
`;

exports[`email rendering tests rendering governance_new_comment_on_proposal 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://governance.decentraland.org/proposal/?id=578d3d3e-9fd2-48cb-bea3-ddc6fb5ab1dd",
  "actionButtonText": "VIEW COMMENT",
  "bannerLabel": "Governance New comment on Proposal",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/486d5137-4b06-425e-b421-42c13cae355e/1200x480.png",
  "content": "<p style="font-size: 16px; font-weight: 700; line-height: 24px; text-align: center; color: #43404A;">
  A new comment has been posted on the proposal <span style="color: #FF2D55;">Decentraland No-Code UI Design Studio</span>. Check it out and engage in productive discussion.
</p>",
  "subject": "New Comment on Proposal 🗨️",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/governance_new_comment_on_proposal?signature=8aac2dc2f0e423b34fa237c2f780678db04317f546f846612c81f8b785ad1be2",
}
`;

exports[`email rendering tests rendering governance_pitch_passed 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://governance.decentraland.org/proposal/?id=c9564934-1f5e-44a3-836e-c0e94c1f593f",
  "actionButtonText": "SEE THE PITCH",
  "bannerLabel": "Governance Pitch Passed",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/8ac7d8fe-2a59-40c8-90a0-ba648047742e/600x240.png",
  "content": "<p style="font-size: 16px; font-weight: 700; line-height: 24px; text-align: center; color: #43404A;">
  The pitch, <span style="color: #FF2D55;">Limit Grants Re-Submissions</span>, has passed and can now receive tenders. Help advance this idea by proposing potential solutions.
</p>
",
  "subject": "Pitch Open for Tenders ✍️",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/governance_pitch_passed?signature=f62cdb39ed30d32ffcf6304ca423bbef4a15f72d2e75066f8013ef9d639cfe39",
}
`;

exports[`email rendering tests rendering governance_proposal_enacted 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://governance.decentraland.org/proposal/?id=578d3d3e-9fd2-48cb-bea3-ddc6fb5ab1dd",
  "actionButtonText": "VIEW CONTRACT",
  "bannerLabel": "Governance Project is Funded",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/c237e820-81d2-48ac-a1a8-130c54a34149/1200x480.png",
  "content": "<p style="font-size: 16px; font-weight: 700; line-height: 24px; text-align: center; color: #43404A;">
  Your Project <span style="color: #FF2D55;">Decentraland No-Code UI Design Studio</span> has been successfully enacted and a funding Vesting Contract was created.
</p>",
  "subject": "Your Project is Funded! 🥳",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/governance_proposal_enacted?signature=f3dfdad5828adce10d2dbd465c15a6abe00cce0bd743cd5672a206fb331101a2",
}
`;

exports[`email rendering tests rendering governance_tender_passed 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://governance.decentraland.org/proposal/?id=c9564934-1f5e-44a3-836e-c0e94c1f593f",
  "actionButtonText": "SEE THE TENDER",
  "bannerLabel": "Governance Tender Passed",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/4b6840b3-bf35-45fa-8dea-c089d0a2f46c/600x240.png",
  "content": "<p style="font-size: 16px; font-weight: 700; line-height: 24px; text-align: center; color: #43404A;">
  The tender you voted on, <span style="color: #FF2D55;">Limit Grants Re-Submissions</span>, has passed and can now receive bids. If you think you can tackle this solution, make a bid and propose a project!
</p>
",
  "subject": "Tender Open for Bids ✍️",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/governance_tender_passed?signature=55f54b9574722ae7e44aa32dab3c1c941dd5ebe6684f0dae6f963419ac1afd58",
}
`;

exports[`email rendering tests rendering governance_voting_ended_voter 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://governance.decentraland.org/proposal/?id=c9564934-1f5e-44a3-836e-c0e94c1f593f",
  "actionButtonText": "DISCOVER THE RESULTS",
  "bannerLabel": "Governance Voting Ended",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/ac86aea0-cf5b-4f4c-91fc-9ea871f7aa90/1200x480.png",
  "content": "<p style="font-size: 16px; font-weight: 700; line-height: 24px; text-align: center; color: #43404A;">
  You voted on the proposal, <span style="color: #FF2D55;">Limit Grants Re-Submissions</span>, and now the results are in! Check out the proposal to see the outcome.
</p>",
  "subject": "Voting Closed—Discover the Results! 👀",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/governance_voting_ended_voter?signature=b990e4bad77532500c9cb86bdfd0ed47fc22e5f4dba9733be46ab2de4a896481",
}
`;

exports[`email rendering tests rendering item_sold 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://decentraland.org/marketplace/contracts/0xca520eea5aadff51b48d9e9b3038001a751139ca/tokens/180",
  "actionButtonText": "SEE ITEM PAGE",
  "bannerLabel": "Item Sold",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/20807f53-13ac-4150-99d5-57091b75cbd2/1200x480.png",
  "content": "<p style='font-size: 20px; font-weight: 700; line-height: 24px; color: #43404A; margin: 24px auto;'>
  You just sold <span style='color: #FF2D55;'>HeartPrint Shoes</span>!
</p>",
  "subject": "You’ve Sold an Item! 🥳",
  "title": "Congratulations",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/item_sold?signature=9d39adb74e120e5abcfd5803e621ae2e80fc716d10f171f73bf011a3f6da8a02",
}
`;

exports[`email rendering tests rendering rental_ended 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://decentraland.org/marketplace/contracts/0x959e104e1a4db6317fa58f8295f586e1a978c297/tokens/1249/manage",
  "actionButtonText": "VIEW CONTRACT",
  "bannerLabel": "Rental Period Ended",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/60113311-21a4-415a-bd7e-957cc68ff7ea/1200x480.png",
  "content": "<p style='font-family: Inter, sans-serif; font-size: 16px; font-weight: 700; line-height: 24px; text-align: center;'>
  The rental period on your LAND (<span style='color: #FF2D55;'>3,2</span>) to
  <span style='color: #FF2D55;'>0x135b17eaa25e3e0f3ce8f0a575bcc8867031f77c</span>
  has ended.
</p>",
  "subject": "Rental Period Ended 🙌",
  "title": "Hey there",
  "titleHighligth": "",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/rental_ended?signature=21a703f932c6e5610468c1d2f2131fe14699976425529b407452769cab6b56ab",
}
`;

exports[`email rendering tests rendering rental_started 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://decentraland.org/marketplace/contracts/0x959e104e1a4db6317fa58f8295f586e1a978c297/tokens/5051/manage",
  "actionButtonText": "VIEW CONTRACT",
  "bannerLabel": "Land Rented",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/d77399af-a1bf-4803-b099-50fb33b5b54a/1200x480.png",
  "content": "<p style="font-size: 16px; font-weight: 700; line-height: 24px; text-align: center; color: #43404A;">
  Your LAND <span style="color: #FF2D55;">(1,2)</span> has been rented.
</p>
",
  "subject": "Your LAND Has Been Rented 💸",
  "title": "Congratulations",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/rental_started?signature=32ef3d8ee29b758d9822c2efc5d62873c015d414ab6740e01a92329725dc6114",
}
`;

exports[`email rendering tests rendering reward_assignment 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "",
  "actionButtonText": "VIEW IN YOUR BACKPACK",
  "bannerLabel": "Free Item Received Banner",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/1c60d4c8-2c42-412c-8714-debc28473661/1200x480.png",
  "content": "<p style="font-family: Inter, sans-serif; font-size: 16px; font-weight: 700; line-height: 24px; text-align: center;">
  You've received <span style="color: #438FFF;">MESHfair 2024 Halo</span> for free! Find it in your Backpack and try it out.
</p>
",
  "subject": "Free Item Received! 🎁",
  "title": "Congratulations",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/reward_assignment?signature=f0e7a9b4fbf803375b4148cd23f4a07fd84d89b37c91bd1df6b53b1d3d90da32",
}
`;

exports[`email rendering tests rendering reward_campaign_out_of_funds 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://decentraland.org/rewards/campaign/aksdjlaskjdakl",
  "actionButtonText": "MANAGE CAMPAIGN",
  "bannerLabel": "Campaign out of founds",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/326b02c6-4c0a-4860-9609-e3c983a57227/600x240.png",
  "content": "<p style="font-size: 16px; font-weight: 700; line-height: 24px; text-align: center; color: #43404A;">
  Your giveaway campaign, <span style="color: #FF2D55;">Name of the campaign</span>, has run out of funds to cover gas fees. Add more to get it running again.
</p>
",
  "subject": "⚠️ Your Giveaway is Out of Funds",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/reward_campaign_out_of_funds?signature=7a1e57984190914db8f28a1c6bd41fb86364ccbdf0f66704d4b1b9513771da1a",
}
`;

exports[`email rendering tests rendering reward_campaign_out_of_stock 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://decentraland.org/rewards/campaign/aksdjlaskjdakl",
  "actionButtonText": "MANAGE CAMPAIGN",
  "bannerLabel": "Campaign out of stock",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/e6c6ab73-1a86-449b-9052-450e7db4a10e/600x240.png",
  "content": "<p style="font-size: 16px; font-weight: 700; line-height: 24px; text-align: center; color: #43404A;">
  The items allocated to your giveaway campaign, <span style="color: #FF2D55;">Name of the campaign</span>, have run out. Add more to get it running again.
</p>
",
  "subject": "⚠️ Your Giveaway is Out of Stock",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/reward_campaign_out_of_stock?signature=cd8f3f714a6f0a55e8e8dd532e06cabd73ab7c3224733efa186315d78242a318",
}
`;

exports[`email rendering tests rendering royalties_earned 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://decentraland.org/marketplace/contracts/0x08cbc78c1b2e2eea7627c39c8adf660d52e3d82c/tokens/945",
  "actionButtonText": "SEE ITEM PAGE",
  "bannerLabel": "Royalties Earned",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/bb83b925-8920-43e7-9ede-c706b09d6962/1200x480.png",
  "content": "<p style='font-size: 20px; font-weight: 700; line-height: 24px; color: #43404A; margin: 0;'>
  You’ve earned
  <span
    style='display: inline-flex; align-items: center; padding: 5px 10px; background-color: #3a3745; color: #fff; border-radius: 20px; font-size: 14px; line-height: 1; vertical-align: middle;'
  >
    <img
      src='http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/f04c0202-bbc4-4b5a-8e1c-f2a893f4d590/14x14.png'
      alt='Polygon Mana'
      style='height: 16px; width: 16px; margin-right: 5px;'
    />
    <span style='margin-right: 8px; font-weight: bold;'>0.90</span>
  </span>
  in the secondary sale of
  <span style='color: #FF2D55;'>Blue santa hat</span>!
</p>",
  "subject": "You‘ve Earned Royalties! 💸",
  "title": "Congratulations",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/royalties_earned?signature=959d803e1bb8bc4e45820c6e2b82184654968fffb6bae1f6380fbef04a96e0fe",
}
`;

exports[`email rendering tests rendering streaming_key_expired 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://play.decentraland.org/?position=10%2C10&realm=my-world.dcl.eth",
  "actionButtonText": "JUMP TO YOUR SCENE",
  "bannerLabel": "Streaming Key Expired",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/aa968b00-65d2-43f5-8900-a0ac7ee426f8/600x240.png",
  "content": "<p>The stream key for the scene at my-world.dcl.eth has expired. If you'd like to stream to this location, please generate a new stream key from the Admin Tools panel in Decentraland.</p> ",
  "subject": "Your Stream Key Has Expired 🔑",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/streaming_key_expired?signature=319411b2d2d1807040a2f412c17d8d8849438947b916fdedfa148b1306843105",
}
`;

exports[`email rendering tests rendering streaming_key_reset 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://play.decentraland.org/?position=10%2C10&realm=my-world.dcl.eth",
  "actionButtonText": "JUMP TO YOUR SCENE",
  "bannerLabel": "Streaming Key Reset",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/d9a55c91-29a0-434c-8548-a81b5bf3651b/600x240.png",
  "content": "<p>The stream key for the scene at my-world.dcl.eth has been reset. If you'd like to stream to this location, please generate a new stream key from the Admin Tools panel in Decentraland.</p> ",
  "subject": "Your Stream Key Has Been Reset 🔑",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/streaming_key_reset?signature=668944cba9e41563bcd6e4ce0cf140a786e02d902d6b52ab5745f9c2e42c456f",
}
`;

exports[`email rendering tests rendering streaming_key_revoke 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://play.decentraland.org/?position=10%2C10&realm=my-world.dcl.eth",
  "actionButtonText": "jump TO YOUR SCENE",
  "bannerLabel": "Streaming Key Deactivated",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/b2952fb9-69f1-4ef7-a692-7cc28a817642/600x240.png",
  "content": "<p>The stream key for the scene at my-world.dcl.eth has been deactivated. If you need a new key, you can always generate one from the Admin Tools panel in Decentraland.</p> ",
  "subject": "Your Stream Key Has Been Deactivated 🔑",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/streaming_key_revoke?signature=d357fc46e0d0b57f1fd6b12483d3f224f53644a16ab14834f6416f81a12e818b",
}
`;

exports[`email rendering tests rendering streaming_place_updated 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://play.decentraland.org/?position=10%2C10&realm=my-world.dcl.eth",
  "actionButtonText": "JUMP TO YOUR SCENE",
  "bannerLabel": "Streaming Scene Updated",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/7276f99a-8ced-4e2c-9f48-83b09bfd2947/600x240.png",
  "content": "<p>The scene at my-world.dcl.eth has been modified, invalidating active stream keys. If you'd like to stream to this location, please generate a new stream key from the Admin Tools panel in Decentraland.</p> ",
  "subject": "Stream Scene Altered—New Key Required for Streaming 🚧",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/streaming_place_updated?signature=67d7e0111536c4a9cf46b8d8025a993ec7622228be1b94b989480b129cc36d77",
}
`;

exports[`email rendering tests rendering streaming_time_exceeded 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://play.decentraland.org/?position=10%2C10&realm=my-world.dcl.eth",
  "actionButtonText": "JUMP TO YOUR SCENE",
  "bannerLabel": "Streaming Time Limit Reached",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/a8787ece-72a7-4e33-ab41-cd700835e34d/600x240.png",
  "content": "<p>Streams to Decentraland automatically timeout after 4 hours. If you'd like to continue streaming to my-world.dcl.eth, just restart your stream in your broadcasting software (e.g. OBS).</p> ",
  "subject": "Stream Timed Out—Are You Still Streaming? 🕙",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/streaming_time_exceeded?signature=28b73d88de7f560b14fec1a2ca7677a449000da2f6e6e25d2eba6f2a53ad7156",
}
`;

exports[`email rendering tests rendering worlds_access_restored 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://decentraland.org/builder/worlds?tab=dcl",
  "actionButtonText": "MANAGE WORLDS",
  "bannerLabel": "World access Restored",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/c81be6d3-83e7-409c-a04d-e17f297dca61/1200x480.png",
  "content": "<p style="font-size: 16px; font-weight: 700; line-height: 24px; text-align: center; color: #43404A;">
  Congratulations! Access to your World(s) has been restored.
</p>",
  "subject": "World Access Restored 🥳",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/worlds_access_restored?signature=aeb5c56796a62bda50e2156422fa41c2560afd22268b5a90b9c34609fc6bc3e5",
}
`;

exports[`email rendering tests rendering worlds_access_restricted 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://decentraland.org/builder/worlds?tab=dcl",
  "actionButtonText": "MANAGE WORLDS",
  "bannerLabel": "World access Restricted",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/440a9fe8-9873-4582-8fec-26d9f9e62bff/1200x480.png",
  "content": "<p style="font-size: 16px; font-weight: 700; line-height: 24px; text-align: center; color: #43404A;">
  Access to your World(s) has been restricted due to insufficient World Storage. To regain access, please decrease your scene’s size or get more storage. Learn more
  <a href="https://docs.decentraland.org/creator/worlds/about/#worlds-size-limit" style="color: #FF2D55; text-decoration-line: underline; text-decoration-style: solid;">here</a>.
</p>",
  "subject": "World Access Restricted 🚨",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/worlds_access_restricted?signature=5e65d8cf2afa3afbc02d9d175b8c5b139312dc80ec1d5e6a79c91662c9918cc8",
}
`;

exports[`email rendering tests rendering worlds_missing_resources 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://decentraland.org/builder/worlds?tab=dcl",
  "actionButtonText": "MANAGE WORLDS",
  "bannerLabel": "World at risk",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/75dc7a55-c7dd-4a4c-b204-8368e7090848/1200x480.png",
  "content": "<p style="font-size: 16px; font-weight: 700; line-height: 24px; text-align: center; color: #43404A;">
  A World of yours has a scene deployed that is larger than your available World Storage. Please rectify this within 24hrs to avoid having your World access restricted. You can either decrease your scene’s size or get more storage. Learn more 
  <a href="https://docs.decentraland.org/creator/worlds/about/#worlds-size-limit" style="color: #FF2D55; text-decoration-line: underline; text-decoration-style: solid;">here</a>.
</p>",
  "subject": "🚨 [Action Needed] Insufficient World Storage",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/worlds_missing_resources?signature=d65886c8b10069f5d1355a2b05199b2059b7e0a48049a1d6531fcbb9d3398eb6",
}
`;

exports[`email rendering tests rendering worlds_permission_granted 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://decentraland.org/builder/worlds?tab=dcl",
  "actionButtonText": "MANAGE WORLDS",
  "bannerLabel": "World Permissions Granted",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/e7520d32-cd46-4256-b24b-8169fe9eee3f/600x240.png",
  "content": "<p style="font-size: 16px; font-weight: 700; line-height: 24px; text-align: center; color: #43404A;">
  You’ve been granted the following World permission(s) to el.dcl.eth: 
</p>",
  "subject": "World Permissions Granted 🥳",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/worlds_permission_granted?signature=807e16ba5e0d7d196158bcc4e02d49d8f26ee6cd4d6b321e0be3b6bfe096799d",
}
`;

exports[`email rendering tests rendering worlds_permission_revoked 1`] = `
{
  "accountLink": "https://decentraland.zone/account",
  "actionButtonLink": "https://decentraland.org/builder/worlds?tab=dcl",
  "actionButtonText": "MANAGE WORLDS",
  "bannerLabel": "World permission revoked",
  "bannerUrl": "http://cdn.mcauto-images-production.sendgrid.net/2322095804444b83/f3836bd1-9285-4491-90c5-123fe595cb83/600x240.png",
  "content": "<p style="font-size: 16px; font-weight: 700; line-height: 24px; text-align: center; color: #43404A;">
  The owner of el.dcl.eth has revoked your  permissions for their World.
</p>",
  "subject": "World Permissions Revoked 🛑",
  "title": "Hey there",
  "titleHighligth": """",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.decentraland.org/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/worlds_permission_revoked?signature=11ecba1cbdb390cf8ea1cd5e13d746d8c7a1f918a2c3e5d641a03b6269176ba6",
}
`;
